pagination mixins & jump popup fixes

--- a/assets/css/common/layout.styl
+++ b/assets/css/common/layout.styl
@@ -138,6 +138,8 @@
   float left
   margin 0
 
+label.pgn-jump
+  margin-bottom 0
 
 //
 // Debug area
